mini_template_macro/tests/create_modifier/missing_value_argument.stderr
error: Modifiers require at least one argument
 --> tests/create_modifier/missing_value_argument.rs:3:1
  |
3 | #[create_modifier]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `create_modifier` (in Nightly builds, run with -Z macro-backtrace for more info)
