mini_template_macro/tests/create_modifier/missing_value_argument.rs
use mini_template_macro::create_modifier;

#[create_modifier]
fn modifier() -> String {
    todo!()
}

fn main() {}